--- a/BetterDiscord/plugins/RemoveNicknames.config.json
+++ b/BetterDiscord/plugins/RemoveNicknames.config.json
@@ -3,6 +3,7 @@
 		"general": {
 			"replaceOwn": false,
 			"replaceBots": true,
+			"removeGlobal": true,
 			"addNickname": false,
 			"swapPositions": false
 		},
