--- a/BetterDiscord/plugins/0BDFDB.config.json
+++ b/BetterDiscord/plugins/0BDFDB.config.json
@@ -1,28 +1,30 @@
 {
 	"all": {
 		"changeLogs": {
-			"BDFDB": "3.2.8",
+			"BDFDB": "3.3.5",
 			"BetterNsfwTag": "1.3.2",
-			"PluginRepo": "2.5.0",
-			"ReadAllNotificationsButton": "1.7.4",
-			"RemoveNicknames": "1.4.3",
-			"ServerCounter": "1.0.6",
-			"ShowBadgesInChat": "1.9.9",
-			"ShowConnections": "1.1.7",
-			"Translator": "2.5.5"
+			"HideMutedCategories": "1.1.2",
+			"ReadAllNotificationsButton": "1.7.5",
+			"RemoveNicknames": "1.4.4",
+			"ServerCounter": "1.0.7",
+			"ShowBadgesInChat": "2.0.1",
+			"ShowConnections": "1.1.9",
+			"StaffTag": "1.5.9",
+			"TopRoleEverywhere": "3.1.2",
+			"Translator": "2.5.8"
 		},
 		"choices": {
-			"toastPosition": "right"
+			"toastPosition": "center"
 		},
 		"general": {
 			"shareData": true,
+			"showSupportBadges": true,
 			"showToasts": true,
-			"showSupportBadges": false,
 			"useChromium": false
 		},
 		"hashes": {
-			"0BDFDB.data.json": "4fa62c6b427dac9470121312280d636ab822a22c",
-			"0BDFDB.raw.css": "669b57713c736057d0465f4f6258d01a964161e8"
+			"0BDFDB.data.json": "2afe666ee053b89b170e864bbc26133bc8ef2b10",
+			"0BDFDB.raw.css": "6b9da96e121eb6dc70477f21e35a467a73e8d250"
 		}
 	}
 }
